# secrets-test-task

./: .env.exapmle  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_07_1542-6cd0ce98ba02_add_tables_log_and_secret.py
src/api/: __init__.py  dependencies.py  schemas.py
src/api/routers/: __init__.py  secret.py
src/infra/: redis.py
src/models/: __init__.py  log.py  secret.py
src/schemas/: secret.py
src/services/: secret.py
src/utils/: secret.py
